[package]
name = "rusted_quotes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Exclude the binary target for WASM builds
[[bin]]
name = "rusted_quotes"
path = "src/main.rs"
required-features = ["binary"]

[features]
binary = []

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
]