[package]
name = "rusted_quotes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "server"
path = "src/server.rs"
required-features = ["server"]

[[bin]]
name = "rusted_quotes"
path = "src/main.rs"
required-features = ["binary"]

[features]
binary = []
default = []
server = ["tokio", "axum", "sqlx", "tower", "tower-http", "chrono", "uuid", "dotenv", "regex"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Server dependencies (only when server feature is enabled)
tokio = { version = "1.0", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
dotenv = { version = "0.15", optional = true }
regex = { version = "1.10", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Window",
  "Response",
  "Request",
  "RequestInit",
  "RequestMode",
  "Headers",
  "Event",
  "EventTarget",
  "DomTokenList",
  "NodeList",
]